--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,6 +4,7 @@ default:
   APPLICATION_URL_WOMEN_OWNED: $APPLICATION_URL/sri-reg/women-owned
   BC_TOB_API_URL: https://devex-von-test.pathfinder.gov.bc.ca/api
   BC_TOB_APP_URL: https://devex-von-test.pathfinder.gov.bc.ca
+  TEMPLATE_PATH: ../templates
   TOB_API_URL: http://tob-api:8080/api/v1
   TOB_APP_URL: http://localhost:8080
   WALLET_SEED_CISD: pspc-cisd-sri0000000000000000000
