--- a/config/services.yml
+++ b/config/services.yml
@@ -10,25 +10,126 @@ issuers:
     url: "https://www.canada.ca/en/public-services-procurement.html"
     email: sri.ab@example.ca
 
+    connection:
+      type: TheOrgBook
+      api_url: $TOB_API_URL
+      sign_target: false
+
     wallet:
+      name: ${POSTGRESQL_WALLET_NAME:-bcreg_issuer}
       seed: $WALLET_SEED_PSPC
+      type: $WALLET_TYPE
+      params:
+        storage_config:
+          url: "$POSTGRESQL_WALLET_HOST:$POSTGRESQL_WALLET_PORT"
+      access_creds:
+        key: $WALLET_ENCRYPTION_KEY
+        storage_credentials:
+          account: $POSTGRESQL_WALLET_USER
+          password: $POSTGRESQL_WALLET_PASSWORD
+          admin_account: ${POSTGRESQL_WALLET_ADMIN_USER:-postgres}
+          admin_password: $POSTGRESQL_WALLET_ADMIN_PASSWORD
+        key_derivation_method: ARGON2I_MOD
 
     credential_types:
       - description: Vendor Credential
         schema: pspc-sri.gc-vendor-credential
         issuer_url: $APPLICATION_URL_REGISTER
+        credential:
+          effective_date:
+            input: effective_date
+            from: claim
+        topic:
+          source_id:
+            input: legal_entity_id
+            from: claim
+          type:
+            input: registration
+            from: value
+        mapping:
+          - model: name
+            fields:
+              type:
+                input: entity_name
+                from: value
+              text:
+                input: legal_name
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: entity_status
+                from: value
+              format:
+                input: category
+                from: value
+              text:
+                input: status
+                from: claim
+          - model: attribute
+            fields:
+              type:
+                input: org_type
+                from: value
+              format:
+                input: category
+                from: value
+              text:
+                input: org_type
+                from: claim
+          - model: address
+            fields:
+              addressee:
+                input: addressee
+                from: claim
+              civic_address:
+                input: address_line_1
+                from: claim
+              city:
+                input: city
+                from: claim
+              province:
+                input: province
+                from: claim
+              postal_code:
+                input: postal_code
+                from: claim
+              country:
+                input: country
+                from: claim
 
       - description: Green Supplier
         schema: pspc-sri.green-supplier
         issuer_url: $APPLICATION_URL_PSPC_GREEN
+        topic:
+          source_id:
+            input: legal_entity_id
+            from: claim
+          type:
+            input: registration
+            from: value
 
       - description: Women-Owned Supplier
         schema: pspc-sri.women-owned-supplier
         issuer_url: $APPLICATION_URL_WOMEN_OWNED
+        topic:
+          source_id:
+            input: legal_entity_id
+            from: claim
+          type:
+            input: registration
+            from: value
 
       - description: Vendor Performance Evaluation
         schema: pspc-sri.gc-vendor-performance
         issuer_url: $APPLICATION_URL_PSPC_PERF
+        topic:
+          source_id:
+            input: legal_entity_id
+            from: claim
+          type:
+            input: registration
+            from: value
 
   SRI-CISD:
     jurisdiction:
@@ -40,17 +141,49 @@ issuers:
     url: "https://www.tpsgc-pwgsc.gc.ca/esc-src/index-eng.html"
     email: sri.cisd@example.ca
 
+    connection:
+      type: TheOrgBook
+      api_url: $TOB_API_URL
+      sign_target: false
+
     wallet:
+      name: ${POSTGRESQL_WALLET_NAME:-bcreg_cisd}
       seed: $WALLET_SEED_CISD
+      type: $WALLET_TYPE
+      params:
+        storage_config:
+          url: "$POSTGRESQL_WALLET_HOST:$POSTGRESQL_WALLET_PORT"
+      access_creds:
+        key: $WALLET_ENCRYPTION_KEY
+        storage_credentials:
+          account: $POSTGRESQL_WALLET_USER
+          password: $POSTGRESQL_WALLET_PASSWORD
+          admin_account: ${POSTGRESQL_WALLET_ADMIN_USER:-postgres}
+          admin_password: $POSTGRESQL_WALLET_ADMIN_PASSWORD
+        key_derivation_method: ARGON2I_MOD
 
     credential_types:
       - description: Designated Organization Screening
         schema: pspc-sri.designated-organization-screening
         issuer_url: $APPLICATION_URL_CISC_DO
+        topic:
+          source_id:
+            input: legal_entity_id
+            from: claim
+          type:
+            input: registration
+            from: value
 
       - description: Facility Security Clearance
         schema: pspc-sri.facility-security-clearance
         issuer_url: $APPLICATION_URL_CISC_FSC
+        topic:
+          source_id:
+            input: legal_entity_id
+            from: claim
+          type:
+            input: registration
+            from: value
 
   SRI-INAC:
     jurisdiction:
@@ -63,14 +196,38 @@ issuers:
     url: "https://www.canada.ca/en/indigenous-northern-affairs.html"
     email: sri.inac@example.ca
 
+    connection:
+      type: TheOrgBook
+      api_url: $TOB_API_URL
+      sign_target: false
+
     wallet:
+      name: ${POSTGRESQL_WALLET_NAME:-bcreg_inac}
       seed: $WALLET_SEED_INAC
+      type: $WALLET_TYPE
+      params:
+        storage_config:
+          url: "$POSTGRESQL_WALLET_HOST:$POSTGRESQL_WALLET_PORT"
+      access_creds:
+        key: $WALLET_ENCRYPTION_KEY
+        storage_credentials:
+          account: $POSTGRESQL_WALLET_USER
+          password: $POSTGRESQL_WALLET_PASSWORD
+          admin_account: ${POSTGRESQL_WALLET_ADMIN_USER:-postgres}
+          admin_password: $POSTGRESQL_WALLET_ADMIN_PASSWORD
+        key_derivation_method: ARGON2I_MOD
 
     credential_types:
       - description: Aboriginal Business
         schema: isc-inac.aboriginal-business
         issuer_url: $APPLICATION_URL_INAC
-
+        topic:
+          source_id:
+            input: legal_entity_id
+            from: claim
+          type:
+            input: registration
+            from: value
 
 proof_requests:
   sri-registration:
